complete user story 4

--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -3,3 +3,7 @@
 <% @shelters.each do |shelter| %>
   <h2><%= shelter.name %></h2>
 <% end %>
+
+<form action="/shelters/new">
+    <input type="submit" value="New Shelter" />
+</form>
