--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,7 +1,9 @@
 <h1>All Shelters</h1>
 
 <% @shelters.each do |shelter| %>
-  <h2><%= shelter.name %></h2>
+  <h2><%= shelter.name %>
+    <a href="/shelters/:id/edit"> Update Shelter</a>
+  </h2>
 <% end %>
 
 <form action="/shelters/new">
