--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -4,3 +4,5 @@
 <h2><%= @shelter.address %></h2>
 <h2><%= @shelter.city %>, <%= @shelter.state %></h2>
 <h2><%= @shelter.zip %></h2>
+
+<a href="/shelters/<%=@shelter.id%>/edit"> Update Shelter</a>
