user story 6 complete

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -5,4 +5,6 @@
 <h2><%= @shelter.city %>, <%= @shelter.state %></h2>
 <h2><%= @shelter.zip %></h2>
 
-<a href="/shelters/<%=@shelter.id%>/edit"> Update Shelter</a>
+
+<%= link_to 'Update Shelter', "/shelters/#{@shelter.id}/edit" %>
+<%= link_to 'Delete Shelter', "/shelters/#{@shelter.id}", method: :delete %>
